--- a/main_app/templates/cats/show.html
+++ b/main_app/templates/cats/show.html
@@ -1,35 +1,31 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cat Collector</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>One Cat</title>
 </head>
-
 <body>
     <h1>Cat Collector</h1>
 
-    {% for cat in cats %}
     <div class="card text-center">
         <div class="card-header">
           Featured kitta
         </div>
         <div class="card-body">
           <h5 class="card-title">{{ cat.name }}</h5>
-          <a href="/cats/{{cat.id}}" class="btn btn-primary">View {{cat.name}}</a>
+          <p class="card-text">{{ cat.description }}</p>
+          <p class="card-text"> Breed: {{ cat.breed }}</p>
         </div>
         <div class="card-footer text-muted">
           Age: {{ cat.age }}
         </div>
     </div>
-    
-    {% endfor %}
+
+    <a href="/cats" class="btn btn-secondary">Go back to cat list</a>
 
     <footer>All Rights Reserved, Catcollector 2022</footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -39,5 +35,4 @@
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
