--- a/main_app/templates/cats/index.html
+++ b/main_app/templates/cats/index.html
@@ -9,6 +9,9 @@
   <div class="card-body">
     <h5 class="card-title">{{ cat.name }}</h5>
     <a href="/cats/{{cat.id}}" class="btn btn-primary">View details</a>
+    <p>Adopted by:
+      <a href="/user/{{ cat.user.username }}">{{ cat.user.username }}</a>
+    </p>
   </div>
   <div class="card-footer text-muted">
     Age: {{ cat.age }}
