--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -10,15 +10,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Cat Collector</h1>
-
+    <header>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page"><a href="/cats">View All Cats</a></li>
           <li class="breadcrumb-item active" aria-current="page"><a href="/cats/create">Create Cat</a></li>
+          {% if user.is_authenticated %}
+          <li class="breadcrumb-item active" aria-current="page"><a href="/user/{{user}}">{{ user }}'s profile</a></li>
+          <li class="breadcrumb-item active" aria-current="page"><a href="{% url 'logout' %}">Logout</a></li>
+          {% else %}
+          <li class="breadcrumb-item active" aria-current="page"><a href="{% url 'login' %}">Login</a></li>
+          <li class="breadcrumb-item active" aria-current="page"><a href="{% url 'signup' %}">Sign Up</a></li>
+          {% endif %}
         </ol>
     </nav>
+</header>
 
     {% block content %}
 
